--- a/www/partials/login/login.html
+++ b/www/partials/login/login.html
@@ -3,15 +3,17 @@
 <ion-content>
 
 <form id="loginScreen">
+	<h2 class="hidden">Login Form</h2>
 	<label class="loginLabel" for="username">Username :</label>
 	<input class="loginInput" type="text" placeholder="Username">
+	<input class="loginInput" type="text">
 	<br>
 	<br>
 	<label class="loginLabel" for="password">Password :</label>
-	<input class="loginInput" type="password" placeholder="Password">
+	<input class="loginInput" type="password">
 	<a class="forgotPass">Forgot Password?</a>
 	<br>
-	<input type="submit" id="login" value="Login">
+	<a class="underline" href="#/greeting"><input type="submit" id="login" value="Login"></a>
 </form>
 
 </ion-content>
