Edit CSS, Added to App JS, Add partials

--- a/www/partials/return/returningstudent.html
+++ b/www/partials/return/returningstudent.html
@@ -12,7 +12,6 @@
 
 <!--Main Navigation-->
 <div class="bg1"><h2 class="hidden">Background Colour 1</h2></div>
-<!--div class="bg2"><h2 class="hidden">Background Colour 2</h2></div-->
 <ion-list scroll="false" id="navList">
 <ion-item>
     <ion-scroll direction="x" id="navCont">
@@ -39,6 +38,7 @@
 </div>
 
 <div class="homeLinks">
+<h2 class="hidden">Home Links</h2>
 <ion-item class="item-icon-right bgColorHome" href="#">
 <h2>Recently Viewed</h2><i class="icon ion-chevron-right homeItem"></i>
 </ion-item>
