--- a/www/css/style.css
+++ b/www/css/style.css
@@ -385,7 +385,7 @@
 
 #welcomeMessage
 {
-	background: rgba(155, 155, 155, 0.5);
+	background: rgba(255, 255, 255, 0.5);
 	box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.50);
 	padding-top: 30px;
 	padding-bottom: 30px;
@@ -416,14 +416,12 @@
 
 .homeLinks .bgColorHome a
 {
-	background: rgba(155, 155, 155, 0.5);
+	background: rgba(255, 255, 255, 0.5);
 	box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.50);
 }
 
-.homeItem
+.homeLinks .bgColorHome .homeItem
 {
-
+	color: #000;
 }
-
-
 
