--- a/www/partials/login/login.html
+++ b/www/partials/login/login.html
@@ -2,7 +2,7 @@
 
 <ion-content>
 
-<form ng-submit="loginForm()" id="loginScreen">
+<form id="loginScreen">
 	<h2 class="hidden">Login Form</h2>
 	<label class="loginLabel" for="username">Username :</label>
 	<input class="loginInput" type="text" ng-model="user.username">
