--- a/www/partials/return/settings.html
+++ b/www/partials/return/settings.html
@@ -3,7 +3,7 @@
 <div ng-include="'partials/templates/main-header.html'"></div>
 
 <!--Main Banner For Headings-->
-<div class="welcome mainHeading">
+<div class="mainHeading">
 	<h2>Settings</h2>
 </div>
 
