--- a/www/partials/login/greeting/greeting.html
+++ b/www/partials/login/greeting/greeting.html
@@ -1,5 +1,5 @@
 <!--Greeting Screen-->
-<ion-content id="greeting">
+<ion-content scroll="false" id="greeting">
 
 <div id="greetingBeg">
 	<h4>Before, you are sent to the home screen. Are you a</h4>
