--- a/www/partials/return/returningstudent.html
+++ b/www/partials/return/returningstudent.html
@@ -1,4 +1,4 @@
-<ion-content>
+<ion-content scroll="false">
 <!--Main Header Include-->
 <div ng-include="'partials/templates/main-header.html'"></div>
 
