--- a/www/partials/courses/courseshome.html
+++ b/www/partials/courses/courseshome.html
@@ -19,14 +19,20 @@
 	<h2>Course News</h2>
 </div>
 
-<!-- <div id="welcomeBack">
+<div id="welcomeBack">
 	<h3>Welcome Back!</h3>
 	<h5>Posted Jan 3, 2016 8:26 PM</h5>
 	<p>Greetings Students,
-I would like to wish you all a Happy New Year!
-Welcome back to the Interactive Media Specialist Program. I am very excited to be your Prof. I look forward to expanding your knowledge base of web based technologies.
-Marco
+	<br>
+	<br>
+	I would like to wish you all a Happy New Year!
+	<br>
+	<br>
+	Welcome back to the Interactive Media Specialist Program. I am very excited to be your Prof. I look forward to expanding your knowledge base of web based technologies.
+	<br>
+	<br>
+	Marco
 </p>
-</div> -->
+</div>
 
 </ion-content>
