--- a/www/sass/variables.scss
+++ b/www/sass/variables.scss
@@ -22,10 +22,13 @@ $text-center: center;
 // Colors
 $main-color: #ffffff;
 $main-secondary-color: #000000;
+$calendar-background-color: #4A4A4A;
+
 
 //Backgrounds
 $main-background: rgba(255, 255, 255, 0.5);
 $background-secondary: rgba(0,0,0,0.5);
+
 
 //Box Shadows
 $main-box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.50);
