--- a/www/css/style.css
+++ b/www/css/style.css
@@ -600,10 +600,63 @@
   float: right; }
 
 /*-- Classlist --*/
-#classlist #listUser button {
-  width: 100%; }
+#classlist {
+  position: relative;
+  bottom: 63px; }
 
-#classlist #listUser button .bgColorClasslist .userImage {
-  width: 60%; }
+#classlist #listUser button {
+  width: 100%;
+  border: none;
+  background: rgba(255, 255, 255, 0.5);
+  margin-bottom: 1px;
+  padding-top: 20px;
+  padding-bottom: 20px; }
+
+#classlist #listUser button .userImage {
+  width: 20%;
+  float: left;
+  margin-left: 20px; }
+
+#classlist #listUser button .userName {
+  float: right;
+  font-family: "PT Sans", sans-serif;
+  font-weight: 700;
+  font-size: 1.35em;
+  padding-top: 10px;
+  margin-right: 50px;
+  text-align: left; }
+
+/* Classlist Dropdown*/
+#classlist .bgColorClasslist {
+  position: relative;
+  top: 0px; }
+
+#classlist .bgColorClasslist {
+  background: rgba(255, 255, 255, 0.5);
+  margin-bottom: 1px;
+  padding-bottom: 40px; }
+
+#classlist .bgColorClasslist #emailBut {
+  background: rgba(0, 0, 0, 0.8);
+  color: #ffffff;
+  border-radius: 8px;
+  font-family: "robotolight";
+  font-size: 1.125em;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  width: 90%;
+  margin-bottom: 12px;
+  margin-left: 30px; }
+
+#classlist .bgColorClasslist #profileBut {
+  background: rgba(0, 0, 0, 0.8);
+  color: #ffffff;
+  border-radius: 8px;
+  font-family: "robotolight";
+  font-size: 1.125em;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  width: 90%;
+  margin-left: 30px; }
 
 /*# sourceMappingURL=style.css.map */
