--- a/www/partials/courses/classlist.html
+++ b/www/partials/courses/classlist.html
@@ -20,17 +20,15 @@
 	<h2 class="hidden">Classlist</h2>
 	<button id="userBox" ng-click="hiddenDiv = !hiddenDiv">
 		<h3 class="hidden">User Image & Username</h3>
-		<!--img class="userImage" src="img/{{users.user_image}}" alt="user image"-->
+		<img class="userImage" src="img/{{users.user_image}}" alt="user image">
 		<h2 class="userName">{{users.user_last}} , {{users.user_first}}</h2>
 	</button>
-		<div class="classlistDrop" ng-show="hiddenDiv">
+		<ion-item ng-show="hiddenDiv" class="item-icon-right bgColorClasslist">
 		<h4 class="hidden">Classlist Dropdown Classlist</h4>
-		<ion-item class="item-icon-right bgColorClasslist">
 		<button id="emailBut">Email</button>
 		<br>
 		<button id="profileBut">Profile</button>
 		</ion-item>
-	</div> 
 </div>
 </div>
 
