--- a/www/partials/return/returningstudent.html
+++ b/www/partials/return/returningstudent.html
@@ -18,7 +18,7 @@
 <h2>Recently Viewed</h2><i class="icon ion-chevron-right homeItem"></i>
 </ion-item>
 <br>
-<ion-item class="item-icon-right bgColorHome" href="#">
+<ion-item class="item-icon-right bgColorHome" href="#/calendar">
 <h2>View Calendar</h2><i class="icon ion-chevron-right homeItem"></i>
 </ion-item>
 </div>
