--- a/www/css/style.css
+++ b/www/css/style.css
@@ -588,16 +588,15 @@
   transition: all 400ms ease; }
 
 .calendarHeader {
-  background: #4A4A4A;
-  width: 90%;
-  height: 60px;
+  width: 95%;
+  position: relative;
+  left: 10px; }
+
+md-toolbar.md-default-theme:not(.md-menu-toolbar), md-toolbar:not(.md-menu-toolbar) {
+  background-color: #4A4A4A; }
+
+calendar-md .md-toolbar-tools h2 {
   color: #ffffff; }
-
-.calendarHeader .calendarLeft {
-  float: left; }
-
-.calendarHeader .calendarRight {
-  float: right; }
 
 /*-- Classlist --*/
 #classlist {
